Fixed the spacing of speaker name in larger viewports

--- a/front_end/src/components/components-css/storynodescript.css
+++ b/front_end/src/components/components-css/storynodescript.css
@@ -14,7 +14,7 @@
   width: 100%;
   height: 7%;
   position: fixed;
-  bottom: 38%;
+  bottom: 36%;
   left: 6%;
 }
 
